# LightSFT-Qwen3-Humaneval

./: .gitignore  README.md  main.py  pyproject.toml
config/: base.yaml  eval.yaml  llamafactory.yaml  llamafactory_sft.yaml  qwen3_full_sft.yaml  qwen_sft.yaml
scripts/: README.md  download_dataset.py  evaluate_model.py  sample_data.py  setup_offline_env.py  sync_wandb.sh  train_llamafactory_qwen3.py
scripts/qwen3-8b-test/: download_dataset.py  evaluate_model.py  run_sft_background.sh  sample_data.py  start_qwencoder_training.sh  sync_wandb.sh  train_llamafactory_qwen3.py  训练指令.txt
scripts/survey-sft/: CONVERT_GUIDE.md  DATASET_CONVERSION_SPEC.md  convert_all_datasets.py  download_hf_datasets.py
src/: __init__.py
